--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  eva_icons_flutter: ^3.1.0
+  google_fonts: ^3.0.1
+  sizer: ^2.0.15
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
